--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.25.2",
+    "antd-img-crop": "^4.25.0",
     "axios": "^1.10.0",
     "dayjs": "^1.11.13",
     "file-saver": "^2.0.5",
@@ -19,6 +20,7 @@
     "html2canvas": "^1.4.1",
     "i18next": "^25.2.1",
     "i18next-browser-languagedetector": "^8.1.0",
+    "js-cookie": "^3.0.5",
     "jspdf": "^3.0.1",
     "papaparse": "^5.5.3",
     "react": "^18.3.1",
